--- a/exercicios/ex023/tabela002.html
+++ b/exercicios/ex023/tabela002.html
@@ -16,207 +16,235 @@
     }
 
     table {
-        width: 500px;
+        width: 600px;
         border-collapse: collapse;
     }
 
+    caption {
+        font-size: 1.5em;
+        font-weight: bold;
+        padding: 10px;
+        background-color: lightgray;
+    }
+
     td, th {
-        
         border: 1px solid black;
-        text-align: center;
         padding: 10px;
     }
     
+    td.num {
+        text-align: right;
+    }
+
 </style>
 <body>
     <h1>Uso de tabelas Grandes</h1>
     <!-- 
         ANATOMIA PARA TABELAS GRANDES
         TABLE
+            CAPTION - legenda da tabela
             THEAD
                 TR, TD, TH
             TBODY
                 TR, TD, TH
             TFOOT
                 TR, TD, TH
+
+    Escopo de títulos em tabelas
+
+	   - Sem efeitos visuais, apenas semânticos;
+
+    Indicando que o th é relativo aos dados que estão na mesma coluna do mesmo:
+
+	    <th scope="col">    </th>	
+
+    Indicando que o th é relativo aos dados que estão na mesma linha do mesmo:
+
+	    <th scope="row">    </th>
+
+    Ex:     <th scope="col">Estado</th>
+	        <th scope="row">Total de Habitantes</th>
     -->
     <table>
+        <caption>População das Unidades Federativas</caption>
         <thead>
             <tr>
-                <th>Posição</th>
-                <th>Estado</th>
-                <th>População</th>
-                <th>% da pop. total</th>
+                <th scope="col">Posição</th>
+                <th scope="col" style="width: 300px;">Estado</th>
+                <th scope="col" style="width: 150px;">População</th>
+                <th scope="col">% da pop. total</th>
             </tr>
         </thead>
         <tbody>
             <tr>
                 <td>1</td>
                 <td>São Paulo</td>
-                <td>46 081 801</td>
-                <td>21,59%</td>
+                <td class="num">46.081.801</td>
+                <td class="num">21,59%</td>
             </tr>
             <tr>
                 <td>2</td>
                 <td>Minas Gerais</td>
-                <td>21 393 441</td>
-                <td>10,02%</td>
+                <td class="num">21.393.441</td>
+                <td class="num">10,02%</td>
             </tr>
             <tr>
                 <td>3</td>
                 <td>Rio de Janeiro</td>
-                <td>16 055 174</td>
-                <td>8,07%</td>
+                <td class="num">16.055.174</td>
+                <td class="num">8,07%</td>
             </tr>
             <tr>
                 <td>4</td>
                 <td>Bahia</td>
-                <td>14 870 907</td>
-                <td>6,97%</td>
+                <td class="num">14.870.907</td>
+                <td class="num">6,97%</td>
             </tr>
             <tr>
                 <td>5</td>
                 <td>Paraná</td>
-                <td>11 890 517</td>
-                <td>5,57%</td>
+                <td class="num">11.890.517</td>
+                <td class="num">5,57%</td>
             </tr>
             <tr>
                 <td>6</td>
                 <td>Rio Grande do Sul</td>
-                <td>11 233 263</td>
-                <td>5,26%</td>
+                <td class="num">11.233.263</td>
+                <td class="num">5,26%</td>
             </tr>
             <tr>
                 <td>7</td>
                 <td>Pernambuco</td>
-                <td>9 562 007</td>
-                <td>4,48%</td>
+                <td class="num">9.562.007</td>
+                <td class="num">4,48%</td>
             </tr>
             <tr>
                 <td>8</td>
                 <td>Ceará</td>
-                <td>9 268 836</td>
-                <td>4,34%</td>
+                <td class="num">9.268.836</td>
+                <td class="num">4,34%</td>
             </tr>
             <tr>
                 <td>9</td>
                 <td>Pará</td>
-                <td>8 711 196</td>
-                <td>4,08%</td>
+                <td class="num">8.711.196</td>
+                <td class="num">4,08%</td>
             </tr>
             <tr>
                 <td>10</td>
                 <td>Santa Catarina</td>
-                <td>8 187 029</td>
-                <td>3,84%</td>
+                <td class="num">8.187.029</td>
+                <td class="num">3,84%</td>
             </tr>
             <tr>
                 <td>11</td>
                 <td>Goiás</td>
-                <td>7 423 629</td>
-                <td>3,48%</td>
+                <td class="num">7.423.629</td>
+                <td class="num">3,48%</td>
             </tr>
             <tr>
                 <td>12</td>
                 <td>Maranhão</td>
-                <td>7 018 211</td>
-                <td>3,29%</td>
+                <td class="num">7.018.211</td>
+                <td class="num">3,29%</td>
             </tr>
             <tr>
                 <td>13</td>
                 <td>Amazonas</td>
-                <td>4 321 616</td>
-                <td>2,02%</td>
+                <td class="num">4.321.616</td>
+                <td class="num">2,02%</td>
             </tr>
             <tr>
                 <td>14</td>
                 <td>Paraíba</td>
-                <td>4 164 468</td>
-                <td>1,95%</td>
+                <td class="num">4.164.468</td>
+                <td class="num">1,95%</td>
             </tr>
             <tr>
                 <td>15</td>
                 <td>Espírito Santo</td>
-                <td>4 126 854</td>
-                <td>1,93%</td>
+                <td class="num">4.126.854</td>
+                <td class="num">1,93%</td>
             </tr>
             <tr>
                 <td>16</td>
                 <td>Mato Grosso</td>
-                <td>3 893 659	</td>
-                <td>1,82%</td>
+                <td class="num">3.893.659</td>
+                <td class="num">1,82%</td>
             </tr>
             <tr>
                 <td>17</td>
                 <td>Rio Grando do Norte</td>
-                <td>3 455 236</td>
-                <td>1,62%</td>
+                <td class="num">3.455.236</td>
+                <td class="num">1,62%</td>
             </tr>
             <tr>
                 <td>18</td>
                 <td>Piauí</td>
-                <td>3 384 547</td>
-                <td>1,59%</td>
+                <td class="num">3.384.547</td>
+                <td class="num">1,59%</td>
             </tr>
             <tr>
                 <td>19</td>
                 <td>Alagoas</td>
-                <td>3 220 848</td>
-                <td>1,51%</td>
+                <td class="num">3.220.848</td>
+                <td class="num">1,51%</td>
             </tr>
             <tr>
                 <td>20</td>
                 <td>Distrito Federal</td>
-                <td>2 996 899</td>
-                <td>1,40%</td>
+                <td class="num">2.996.899</td>
+                <td class="num">1,40%</td>
             </tr>
             <tr>
                 <td>21</td>
                 <td>Mato Grosso do Sul</td>
-                <td>2 924 631</td>
-                <td>1,37%</td>
+                <td class="num">2.924.631</td>
+                <td class="num">1,37%</td>
             </tr>
             <tr>
                 <td>22</td>
                 <td>Sergipe</td>
-                <td>2 299 425</td>
-                <td>1,08%</td>
+                <td class="num">2.299.425</td>
+                <td class="num">1,08%</td>
             </tr>
             <tr>
                 <td>23</td>
                 <td>Rondônia</td>
-                <td>1 751 950</td>
-                <td>0,82%</td>
+                <td class="num">1.751.950</td>
+                <td class="num">0,82%</td>
             </tr>
             <tr>
                 <td>24</td>
                 <td>Tocantins</td>
-                <td>1 586 859</td>
-                <td>0,74%</td>
+                <td class="num">1.586.859</td>
+                <td class="num">0,74%</td>
             </tr>
             <tr>
                 <td>25</td>
                 <td>Acre</td>
-                <td>884 372</td>
-                <td>0,41%</td>
+                <td class="num">884.372</td>
+                <td class="num">0,41%</td>
             </tr>
             <tr>
                 <td>26</td>
                 <td>Amapá</td>
-                <td>806 517</td>
-                <td>0,38%</td>
+                <td class="num">806.517</td>
+                <td class="num">0,38%</td>
             </tr>
             <tr>
                 <td>27</td>
                 <td>Roraima</td>
-                <td>738 772	</td>
-                <td>0,35%</td>
+                <td class="num">738.772	</td>
+                <td class="num">0,35%</td>
             </tr>
         </tbody>
         <tfoot>
             <tr>
-                <th>Total de Habitantes</th>
-                <td>00000</td>
+                <th scope="row"></th>
+                <th scope="row">Total de Habitantes</th>
+                <td class="num"><strong>213.421.037</strong></td>
+                <td class="num"><strong>100%</strong></td>
             </tr>
         </tfoot>
     </table>
