--- a/exercicios/modulo-05/ex028/grid04/index.html
+++ b/exercicios/modulo-05/ex028/grid04/index.html
@@ -6,36 +6,42 @@
     <title>Grid Layout na prática</title>
     <style>
         div.container {
-            border: 3px solid blue;
             display: grid;
+            grid-template-rows: repeat(3, 100px);
+            grid-template-columns: 4, 1fr;
             gap: 10px;
-            grid-template-rows: repeat(3, 80px);
-            grid-template-columns: 1fr 4fr 1fr;
-            grid-auto-rows: 80px;
-            grid-auto-columns: 100px;
-            grid-auto-flow: row;
-            place-items: normal normal;
-            place-content: normal normal;
         }
 
-        div.item {
-            border: 3px solid red;
-            padding: 5px;
+        .caixa1 {
+            background-color: red;
+            grid-row-start: 1;
+            grid-row-end: 2;
+            grid-column-start: 1;
+            grid-column-end: 5;
+        }
+
+        .caixa2 {
+            background-color: yellow;
+            grid-row-start: 2;
+            grid-row-end: 4;
+            grid-column-start: 1;
+            grid-column-end: 3;
+        }
+
+        .caixa3 {
+            background-color: green;
+            grid-row-start: 2;
+            grid-row-end: 4;
+            grid-column-start: 3;
+            grid-column-end: 5;
         }
     </style>
 </head>
 <body>
     <div class="container">
-        <div class="item">A</div>
-        <div class="item">B</div>
-        <div class="item">C</div>
-        <div class="item">D</div>
-        <div class="item">E</div>
-        <div class="item">F</div>
-        <div class="item">G</div>
-        <div class="item">H</div>
-        <div class="item">I</div>
-        <div class="item">J</div>
+        <div class="caixa1">CAIXA 1</div>
+        <div class="caixa2">CAIXA 2</div>
+        <div class="caixa3">CAIXA 3</div>
     </div>
 </body>
 </html>
