--- a/exercicios/modulo-05/ex028/grid05/index.html
+++ b/exercicios/modulo-05/ex028/grid05/index.html
@@ -15,6 +15,8 @@
         .caixa1 {
             background-color: red;
             /*
+            3 maneiras para fazer essa declaração:
+
             grid-row-start: 1;
             grid-column-start: 1;
             grid-row-end: 2;
@@ -24,6 +26,7 @@
             grid-row: 1/2;
             grid-column: 1/5; Abaixo simplificação ainda maior
             */
+            
             grid-area: 1/1/2/5;
         }
 
