--- a/desafios/d018 Professor/index.html
+++ b/desafios/d018 Professor/index.html
@@ -161,6 +161,28 @@
 
             <article id="formacao">
                 <h2>Minha Formação</h2>
+                
+                <div id="formacao-container">
+                    <div class="curso">
+                        <p class="periodo">1991 - 1994</p>
+                        <h3 class="instituicao">Escola Técinca Carioca</h3>
+                        <p class="titulacao">Técnico em Informática</p>
+                    </div>
+
+                    <div class="curso">
+                        <p class="periodo">1995 - 2000</p>
+                        <h3 class="instituicao">Escola Técinca Carioca</h3>
+                        <p class="titulacao">Técnico em Informática</p>
+                    </div>
+
+                    <div class="curso">
+                        <p class="periodo">1998 - 2001</p>
+                        <h3 class="instituicao">Escola Técinca Carioca</h3>
+                        <p class="titulacao">Técnico em Informática</p>
+                    </div>
+
+                </div>
+
             </article> <!-- Fim article#formacao -->
 
             <article id="projetos">
